[package]
name = "telespotter"
version = "2.0.0"
edition = "2021"
authors = ["Spin Apin <thumpersecure@github.com>"]
description = "Phone number OSINT search tool for legal investigations - Multi-Engine Search"
license = "MIT"
repository = "https://github.com/thumpersecure/telespotter"

[[bin]]
name = "telespotter"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# HTML parsing
scraper = "0.18"

# CLI
clap = { version = "4.4", features = ["derive", "color"] }

# Terminal colors
colored = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Text processing
regex = "1.10"
lazy_static = "1.4"

# Progress indicators
indicatif = "0.17"

# Time utilities
chrono = "0.4"

# URL encoding
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
